# Ean_est_python_2024

./: pyproject.toml
Clase_2/Código/: Relación entre minutos usados e ingreso de clientes - Introducción a Pandas.ipynb  Relación entre minutos usados e ingreso de clientes Miguel Pablos.ipynb  Segunda_entrega.ipynb
Clase_3/: Distribuciones_de_Probabilidad_01.ipynb  Distribuciones_de_Probabilidad_02.ipynb  Distribuciones_de_Probabilidad_03.ipynb  Inferencia_01.ipynb  Inferencia_02.ipynb  Inferencia_03.ipynb  Inferencia_04.ipynb  Regresión_01.ipynb  Regresión_02.ipynb  Regresión_03.ipynb  Regresión_05.ipynb  Regresión__04.ipynb
Documentación/: README.md
