[tool.poetry]
name = "proyecto-1"
version = "0.1.0"
description = "paquetes de estadistica"
authors = ["Isaac"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.3"
plotly = "^5.24.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
